<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TemperatureActivity"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_area"
        android:textColor="#fff"
        android:textSize="30sp"
        android:textStyle="bold"
        android:background="@color/colorareaconv"
        android:gravity="center" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:clipToPadding="false"
                android:layout_marginTop="20dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="70dp"
                            android:src="@drawable/area"
                            android:elevation="10dp"
                            android:clickable="true"
                            />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <Spinner
                    android:id="@+id/spinner1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/btn_dropdown"
                    android:spinnerMode="dropdown"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:clipToPadding="false"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="To"
                    android:textSize="30sp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:clipToPadding="false">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="70dp"
                            android:src="@drawable/area"
                            android:elevation="10dp"
                            android:clickable="true"
                            />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <Spinner
                    android:id="@+id/spinner2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/btn_dropdown"
                    android:spinnerMode="dropdown"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/valueToConvert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:textSize="25sp"
                    android:paddingTop="10dp"
                    android:inputType="number"
                    android:hint="@string/app_conv_val"
                    android:gravity="center"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingLeft="50dp"
                android:paddingRight="50dp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_conv"
                    android:background="@color/colorareaconv"
                    android:textColor="#fff"
                    android:elevation="10dp"
                    android:onClick="onConvert"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingLeft="50dp"
                android:paddingRight="50dp">


                <TextView
                    android:id="@+id/answer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/app_conv_ans"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingLeft="50dp"
                android:paddingRight="50dp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_clear"
                    android:background="@color/colorareaconv"
                    android:textColor="#fff"
                    android:elevation="10dp"
                    android:onClick="onClear"/>

            </LinearLayout>
        </TableLayout>

    </ScrollView>

</LinearLayout>